add authorization, add password field to User, add services

--- a/WorkoutTracking.WebApi/ToDo.txt
+++ b/WorkoutTracking.WebApi/ToDo.txt
@@ -1,2 +1,3 @@
 ﻿1. add isRequired and on delete to entities +
-2. add friend request list to entities
+2. add friend request list to entities +
+3. add user password and encryption
