add data seed for trainingCategories, add trainingCategoryController, fix dependency injection circle, add delete friend and friendRequest methods

--- a/WorkoutTracking.WebApi/ToDo.txt
+++ b/WorkoutTracking.WebApi/ToDo.txt
@@ -7,3 +7,16 @@
 
 6. add friend controller
 7. notate all method in controllers as "paged" or "paginated"
+8. resolve followingService and friendService dependency problem
+
+
+
+
+
+
+
+
+
+
+
+
