--- a/WorkoutTracking.WebApi/ToDo.txt
+++ b/WorkoutTracking.WebApi/ToDo.txt
@@ -7,7 +7,7 @@
 
 6. add friend controller
 7. notate all method in controllers as "paged" or "paginated"
-8. resolve followingService and friendService dependency problem
+8. resolve followingService and friendService dependency problem +
 
 
 
