add exercise property controller, edit template clone

--- a/WorkoutTracking.WebApi/ToDo.txt
+++ b/WorkoutTracking.WebApi/ToDo.txt
@@ -22,7 +22,8 @@
 12. Exercise orders +
 13. restrict number of exercises per training +
 14. restrict numver of properties per exercise +
-
+15. add update restriction filter when training is in progress
+16. clone Exercise properties on template clone
 
 
 
@@ -38,4 +39,8 @@ ACTIVE
 
 13. restrict number of exercises per training
 
-14. restrict numver of properties per exercise
+14. restrict number of properties per exercise
+
+15. add update restriction filter when training is in progress
+
+16. clone Exercise properties on template clone
